--- a/mural.html
+++ b/mural.html
@@ -291,6 +291,139 @@ desde el que parten todas las páginas en bootstrap-->
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			  </div>
 			</div>
+			  <div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m26.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>Second slide label</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m27.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>First slide label</h5>
+				<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m28.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>Second slide label</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m29.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>Second slide label</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m30.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>holaaa??</h5>
+				<p>esTO LO DEJO O LO QUITO.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m31.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>Second slide label</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m32.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>Second slide label</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m33.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>holaaa??</h5>
+				<p>esTO LO DEJO O LO QUITO.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m34.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>Second slide label</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m35.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>Second slide label</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m36.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>Second slide label</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m37.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>First slide label</h5>
+				<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m38.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>Second slide label</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m39.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>Second slide label</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			  </div>
+			</div>
+			<div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m40.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>holaaa??</h5>
+				<p>esTO LO DEJO O LO QUITO.</p>
+			  </div>
+			</div>
+			  <div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m41.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>holaaa??</h5>
+				<p>esTO LO DEJO O LO QUITO.</p>
+			  </div>
+			</div>
+			  <div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m42.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>holaaa??</h5>
+				<p>esTO LO DEJO O LO QUITO.</p>
+			  </div>
+			</div>
+			  <div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m43.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>holaaa??</h5>
+				<p>esTO LO DEJO O LO QUITO.</p>
+			  </div>
+			</div>
+			  <div class="carousel-item">
+			  <img src="ImagenesKeka/PinturaMural/m44.jpg" class="d-block w-100" alt="...">
+			  <div class="carousel-caption d-none d-md-block">
+				<h5>holaaa??</h5>
+				<p>esTO LO DEJO O LO QUITO.</p>
+			  </div>
+			</div>
 		  </div>
 		  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
